src/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Print Project</fullName>
            </value>
            <value>
                <fullName>Current Client Website Redesign</fullName>
            </value>
            <value>
                <fullName>Email Design Project</fullName>
            </value>
            <value>
                <fullName>Landing Page Design</fullName>
            </value>
            <value>
                <fullName>Logo Design Project</fullName>
            </value>
            <value>
                <fullName>New Site Design</fullName>
            </value>
            <value>
                <fullName>Other Project</fullName>
            </value>
            <value>
                <fullName>Tradeshow Display Design</fullName>
            </value>
            <value>
                <fullName>Vehicle Wrap Design</fullName>
            </value>
            <value>
                <fullName>Video Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>