src/objects/Opportunity/fields/Push_Count__c.field-meta.xml
<CustomField>
    <fullName>Push_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field tracks many times an Opportunity has been pushed from month to month</description>
    <label>Push Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>