src/objects/Opportunity/fields/Quoted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Hours__c</fullName>
    <label>Quoted Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>