src/objects/Opportunity/fields/Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Notes__c</fullName>
    <label>Rejection Reason Detail</label>
    <type>TextArea</type>
</CustomField>