src/objects/Opportunity/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor Qualification</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Authority</fullName>
            </value>
            <value>
                <fullName>Need</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>