src/objects/Opportunity/fields/Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle__c</fullName>
    <formula>IF(IsWon,
CloseDate - AE_Accepted_Date__c,
NULL)</formula>
    <label>Sales Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>