src/objects/Opportunity/fields/SalesRoutes_Interest__c.field-meta.xml
<CustomField>
    <fullName>SalesRoutes_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the customer have an interest in Salesroutes and/or would they benefit from hearing about Salesroutes from Implementation?</inlineHelpText>
    <label>SalesRoutes Interest</label>
    <type>Checkbox</type>
</CustomField>