src/objects/Opportunity/fields/SalesRoutes_New_Pricing__c.field-meta.xml
<CustomField>
    <fullName>SalesRoutes_New_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this customer is receiving the updated SalesRoutes pricing.</inlineHelpText>
    <label>SalesRoutes New Pricing</label>
    <type>Checkbox</type>
</CustomField>