src/objects/Opportunity/fields/Stage_1_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_1_Demo_Date__c</fullName>
    <label>Stage 1 - Demo Date</label>
    <type>Date</type>
</CustomField>