src/objects/Opportunity/fields/Stage_2_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_2_Evaluation_Date__c</fullName>
    <label>Stage 2- Evaluation	 Date</label>
    <type>Date</type>
</CustomField>