src/objects/Opportunity/fields/Stage_3_Negotiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_3_Negotiation_Date__c</fullName>
    <label>Stage 3 - Negotiation Date</label>
    <type>Date</type>
</CustomField>