src/objects/Opportunity/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <description>Subscription ID from PestRoutes database</description>
    <label>Subscription ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>