src/objects/Opportunity/fields/Target_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Go_Live_Date__c</fullName>
    <inlineHelpText>What date is the customer hoping to be live by?</inlineHelpText>
    <label>Target Go Live Date</label>
    <type>Date</type>
</CustomField>