src/objects/Opportunity/fields/True_Up_Amount__c.field-meta.xml
<CustomField>
    <fullName>True_Up_Amount__c</fullName>
    <label>True Up Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>