src/objects/Opportunity/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <inlineHelpText>Mapped from converted Lead.</inlineHelpText>
    <label>Years in Business</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>