src/objects/Opportunity/recordTypes/BDR_Pre_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>BDR_Pre_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Pre-Opportunity</businessProcess>
    <description>PestRoutes BDR to AE Hand-off</description>
    <label>PestRoutes BDR Pre-Opportunity</label>
</RecordType>