src/objects/Opportunity/recordTypes/Lobster_BDR_Pre_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Lobster_BDR_Pre_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Pre-Opportunity</businessProcess>
    <description>Pre-Opportunity for Lobster</description>
    <label>Lobster BDR Pre-Opportunity</label>
</RecordType>