src/objects/Opportunity/recordTypes/Lobster_Project_Quote.recordType-meta.xml
<RecordType>
    <fullName>Lobster_Project_Quote</fullName>
    <active>true</active>
    <businessProcess>Lobster%3A Project Quote</businessProcess>
    <label>Lobster Project Quote</label>
</RecordType>