src/objects/Opportunity/recordTypes/Lobster_Sales.recordType-meta.xml
<RecordType>
    <fullName>Lobster_Sales</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Lobster Sales</label>
</RecordType>