src/objects/Opportunity/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Sales opportunity layout (accepted opportunities)</description>
    <label>PestRoutes Sales</label>
</RecordType>