src/objects/Opportunity/validationRules/Amount_Required_At_Acceptance.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Required_At_Acceptance</fullName>
    <active>true</active>
    <description>You must have an amount in the amount field before accepting an opportunity.</description>
    <errorConditionFormula>AND (
  OR (
     ISPICKVAL(StageName, &quot;1 - Demo&quot;),
     ISPICKVAL(StageName, &quot;2- Evaluation&quot;),
     ISPICKVAL(StageName, &quot;3 - Negotiation&quot;),
     ISPICKVAL(StageName, &quot;3 - Closed Won&quot;)),    
     ISBLANK(  Amount  )
)</errorConditionFormula>
    <errorMessage>You cannot accept or close an opportunity without a figure in the Amount field.</errorMessage>
</ValidationRule>