src/objects/Opportunity/validationRules/Current_Software_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Software_Required</fullName>
    <active>true</active>
    <description>Opportunity cannot be closed won unless a current software option is selected.</description>
    <errorConditionFormula>AND( 
ISCHANGED( StageName ), 
ISPICKVAL(StageName, &quot;Closed Won&quot;), 
$RecordType.Id = &quot;012f4000000B1t5&quot;, 
ISBLANK(TEXT(Current_Software__c))
)</errorConditionFormula>
    <errorMessage>Opportunity cannot be closed won unless a current software option is selected.</errorMessage>
</ValidationRule>