src/objects/Opportunity/validationRules/Customer_Count_Required_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Count_Required_Won</fullName>
    <active>true</active>
    <description>Opportunity cannot be closed won unless number of customers is included</description>
    <errorConditionFormula>AND( 
ISCHANGED( StageName ), 
ISPICKVAL(StageName, &quot;Closed Won&quot;), 
$RecordType.Id = &quot;012f4000000B1t5&quot;, 
ISBLANK(TEXT( Number_of_Customers__c ))
)</errorConditionFormula>
    <errorDisplayField>Number_of_Customers__c</errorDisplayField>
    <errorMessage>Opportunity cannot be closed won unless the number of customers is included.</errorMessage>
</ValidationRule>