src/objects/Opportunity/validationRules/Free_Period_Approved_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Free_Period_Approved_Required</fullName>
    <active>true</active>
    <description>When marking a deal as closed won, this field must be filled out with either &quot;N/A&quot; or a selection for the amount of months approved.</description>
    <errorConditionFormula>AND(
ISCHANGED( StageName ),
ISPICKVAL(StageName, &quot;Closed Won&quot;),
$RecordType.Id = &quot;012f4000000B1t5AAC&quot;, 
OR(
ISBLANK( TEXT( Free_Period_Approved__c ) )
)
)</errorConditionFormula>
    <errorMessage>You need to update the &#39;Free Period Approved&#39; field before continuing.</errorMessage>
</ValidationRule>