src/objects/Opportunity/validationRules/Loss_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Date_Required</fullName>
    <active>true</active>
    <description>If an opportunity is marked as Closed: Deal Lost, a loss date must be provided.</description>
    <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost&quot;)&amp;&amp; ISBLANK(Loss_Date__c )</errorConditionFormula>
    <errorMessage>When a deal is marked as Closed Lost, a Loss Date is required.</errorMessage>
</ValidationRule>