src/objects/Opportunity/validationRules/Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason</fullName>
    <active>true</active>
    <description>If an opportunity is marked &quot;Closed-Lost&quot; it must have a reason.</description>
    <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost&quot;)&amp;&amp; ISPICKVAL(  Lost_Reason__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>If an opportunity is marked &quot;Closed-Lost&quot; it must have a reason.</errorMessage>
</ValidationRule>