src/objects/Opportunity/validationRules/Lost_Reason_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason_Detail</fullName>
    <active>true</active>
    <description>If an opportunity is marked &quot;Closed-Lost&quot; the lost reason detail field must be completed.</description>
    <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost&quot;)&amp;&amp; ISBLANK( Lost_Reason_Detail__c)</errorConditionFormula>
    <errorDisplayField>Lost_Reason_Detail__c</errorDisplayField>
    <errorMessage>If an opportunity is marked &quot;Closed-Lost&quot; the lost reason detail field must be completed.</errorMessage>
</ValidationRule>