src/objects/Opportunity/validationRules/Primary_Competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Competitor</fullName>
    <active>false</active>
    <description>If an opportunity is marked as &quot;Closed Lost / Competitor&quot; it must have a primary competitor.</description>
    <errorConditionFormula>ISPICKVAL( Lost_Reason__c, &quot;Lost to Competitor&quot;)&amp;&amp; ISBLANK(  Primary_Competitor__c)</errorConditionFormula>
    <errorDisplayField>Primary_Competitor__c</errorDisplayField>
    <errorMessage>If an opportunity is marked as &quot;Closed Lost / Competitor&quot; it must have a primary competitor.</errorMessage>
</ValidationRule>