src/objects/Opportunity/validationRules/Rejection_Reason_No_Oppty.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_No_Oppty</fullName>
    <active>true</active>
    <description>If an opportunity is marked &quot;Closed No Oppty&quot; it must have a rejection reason.</description>
    <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed No Oppty&quot;)&amp;&amp; ISPICKVAL(  Rejection_Reason__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>If an opportunity is marked &quot;Closed No Oppty&quot; it must have a rejection reason.</errorMessage>
</ValidationRule>