src/objects/Opportunity/validationRules/Require_Primary_Competitor_List.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Primary_Competitor_List</fullName>
    <active>true</active>
    <description>Requires PCL when the user selects &#39;Competitor&#39; as the lost reason.</description>
    <errorConditionFormula>AND (
     ISPICKVAL(StageName, &quot;Closed Lost&quot;),
     ISPICKVAL(Lost_Reason__c, &quot;Lost to Competitor&quot;),
     ISBLANK(TEXT(Primary_Competitor_List__c))
)</errorConditionFormula>
    <errorMessage>You have selected &#39;Competitor&#39; as the Lost Reason. Please select an option in the &#39;Primary Competitor List&#39; field.</errorMessage>
</ValidationRule>