src/objects/Opportunity/validationRules/Technician_Count_Required_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Technician_Count_Required_Won</fullName>
    <active>true</active>
    <description>Opportunity cannot be closed won unless number of technicians is included</description>
    <errorConditionFormula>AND( 
ISCHANGED(StageName), 
ISPICKVAL(StageName,&quot;Closed Won&quot;), 
$RecordType.Id = &quot;012f4000000B1t5&quot;, 
ISBLANK(TEXT(Number_of_Technicians__c))
)</errorConditionFormula>
    <errorDisplayField>Number_of_Technicians__c</errorDisplayField>
    <errorMessage>Opportunity cannot be closed won unless number of technicians is included</errorMessage>
</ValidationRule>