src/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>BDR Sourced</value>
    </filters>
    <filters>
        <field>Rejection_Reason__c</field>
        <operation>equals</operation>
        <value>No Show</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.BDR_Pre_Opportunity</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Lesley Lowry</value>
    </filters>
    <label>All PR BDR Opportunities</label>
</ListView>