src/objects/Opportunity/listViews/Demo_Overdue.listView-meta.xml
<ListView>
    <fullName>Demo_Overdue</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Meeting_Date__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Credited_BDR__c</columns>
    <columns>Number_of_Customers__c</columns>
    <columns>Number_of_Technicians__c</columns>
    <columns>Budget_Money__c</columns>
    <columns>Current_Software__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Meeting_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>BDR Sourced</value>
    </filters>
    <label>Demo Overdue</label>
</ListView>