src/objects/Opportunity/listViews/Ebb_Walton_Lobster_Opps.listView-meta.xml
<ListView>
    <fullName>Ebb_Walton_Lobster_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>Ebb</value>
    </filters>
    <label>Ebb Walton - Lobster Opps</label>
</ListView>