src/objects/Opportunity/listViews/Justin_s_Open_Opps.listView-meta.xml
<ListView>
    <fullName>Justin_s_Open_Opps</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Credited_BDR__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Johnson</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Closed No Oppty</value>
    </filters>
    <label>Justin&#39;s Open Opps</label>
</ListView>