src/objects/Opportunity/listViews/Lobster_Closed_Won_Opportunities.listView-meta.xml
<ListView>
    <fullName>Lobster_Closed_Won_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>MRR__c</columns>
    <columns>One_Time_Fees__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Lobster_Sales</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>Lobster Sales - Closed Won Opportunities</label>
</ListView>