src/objects/Opportunity/listViews/Lobster_Project_Quote_Open.listView-meta.xml
<ListView>
    <fullName>Lobster_Project_Quote_Open</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Lobster_Project_Quote</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Info Gathering,Internal Discussion,Proposal,BDR Sourced,1 - Demo,2- Evaluation,3 - Negotiation</value>
    </filters>
    <label>Lobster Project Quote - Open</label>
</ListView>