src/objects/Opportunity/listViews/Lobster_Sales_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Lobster_Sales_Follow_Up</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Member_Type__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>walton</value>
    </filters>
    <filters>
        <field>Follow_Up_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </filters>
    <label>Lobster Sales - Follow Up</label>
</ListView>