src/objects/Opportunity/listViews/Lobster_Sales_Open1.listView-meta.xml
<ListView>
    <fullName>Lobster_Sales_Open1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Member_Type__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>walton</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </filters>
    <label>Lobster Sales - Open</label>
</ListView>