src/objects/Opportunity/listViews/Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>Open_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2018</value>
    </filters>
    <label>Open Opportunities</label>
</ListView>