src/objects/Opportunity/listViews/Patrick_Opportunities.listView-meta.xml
<ListView>
    <fullName>Patrick_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Patrick</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>BDR Sourced,1 - Demo,2- Evaluation,3 - Negotiation</value>
    </filters>
    <label>Patrick&#39;s Opportunities</label>
</ListView>