src/objects/Opportunity/listViews/Renewal_Opportunities.listView-meta.xml
<ListView>
    <fullName>Renewal_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2018</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </filters>
    <label>Renewal Opportunities</label>
</ListView>